<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/backup_then_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:lines="1"
        android:text="@string/strBackupThenRefresh"
        android:textColor="@color/white"
        android:background="@drawable/bg_mid_button"
        android:gravity="center"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/direct_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:lines="1"
        android:text="@string/strDirectRefresh"
        android:textColor="@color/white"
        android:background="@drawable/bg_mid_button"
        android:gravity="center"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/continue_startup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:lines="1"
        android:text="@string/strContinueStartup"
        android:textColor="@color/white"
        android:background="@drawable/bg_mid_button"
        android:gravity="center"
        android:textSize="45sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:lines="1"
        android:text="@string/strStartDlgComment"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp" />

</LinearLayout>