<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
	android:focusableInTouchMode="true"
	android:background="@color/background"
    >

    <LinearLayout 
        android:id="@+id/message_list_btns"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
		android:divider="@drawable/divider"
		android:showDividers="middle"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        >

			<TextView
				android:id="@+id/btn_ok_message_list"
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
				android:layout_weight="2"
			    android:gravity="center"
		        android:textSize="@dimen/dialogBtnTextSize"
		        android:textColor="#000000"
		        android:text="@string/str_file_save"
				android:background="@drawable/style_dialog_btn"
			    />


			<TextView
				android:id="@+id/btn_cancel_message_list"
				android:layout_width="0dp"
			    android:layout_height="match_parent"
				android:layout_weight="2"
			    android:gravity="center"
		        android:textSize="@dimen/dialogBtnTextSize"
		        android:textColor="#000000"
		        android:text="@string/str_file_cancel"
				android:background="@drawable/style_dialog_btn"
			    />

	    
        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="2"
			android:gravity="center"
		    android:textSize="@dimen/dialogBtnTextSize"
		    android:textColor="#000000"
		    android:text="@string/str_del" 
		    android:background="@drawable/style_dialog_btn"
            />
		<TextView
			android:id="@+id/btn_multi_select"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="2"
			android:gravity="center"
			android:textSize="@dimen/dialogBtnTextSize"
			android:textColor="#000000"
			android:text="@string/str_multi_select"
			android:background="@drawable/style_dialog_btn"
			/>
<!-- H.M.Wang 2026-5-20 在选择信息列表中增加启动放大显示预览图的按键 -->
		<ImageView
			android:id="@+id/btn_enlarge"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:visibility="gone"
			android:src="@drawable/zoomout"
			android:scaleType="centerInside"
			android:background="@drawable/style_dialog_btn" />
<!-- End of H.M.Wang 2026-5-20 在选择信息列表中增加启动放大显示预览图的按键 -->

		<RelativeLayout
		    android:id="@+id/btn_page_prev" 
		    android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:visibility="gone"
	        >
	        <ImageView 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:src="@drawable/style_dialog_btn"
			    />
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:gravity="center"
		        android:textSize="@dimen/dialogBtnTextSize"
		        android:textColor="#000000"
		        android:text="@string/str_page_prev" 
			    />
	    </RelativeLayout> 
        
		<RelativeLayout
		    android:id="@+id/btn_page_next" 
		    android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:visibility="gone"
	        >
	        <ImageView 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:src="@drawable/style_dialog_btn"
			    />
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:gravity="center"
		        android:textSize="@dimen/dialogBtnTextSize"
		        android:textColor="#000000"
		        android:text="@string/str_page_next" 
			    />
	    </RelativeLayout> 
	    <RelativeLayout
		    android:id="@+id/search" 
		    android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="3"
			android:background="@drawable/style_dialog_btn"
	        >
			<EditText
			    android:id="@+id/et_search"
			    android:layout_width="match_parent"
			    android:layout_height="70dp"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_centerInParent="true"
			    android:textSize="25sp"
			    android:hint="@string/str_search"
			    />
		</RelativeLayout>
    </LinearLayout>
	<com.industry.printer.ui.KZListView.KZListView
	    android:id="@+id/message_listview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@id/message_list_btns"
	    android:background="#ffffff"
	    android:descendantFocusability= "blocksDescendants"
	    />
	
	    
    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:background="#ffffff"
        android:visibility="visible" >
		<ProgressBar
			android:id="@+id/loading_img"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:background="#ffffff"
			style="@android:style/Widget.Holo.ProgressBar.Large" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_centerInParent="true"
			android:layout_below="@+id/loading_img"
			android:text="@string/str_loading"
			android:background="#ffffff"
			android:textSize="30dp" />
<!--        <ImageView
            android:id="@+id/loading_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/loading_image"
            />
-->
    </RelativeLayout>
</RelativeLayout>