<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@color/background"
	android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/password_title"
        android:textColor="#000000"
        android:textSize="24sp"
        />

    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<EditText
			android:id="@+id/password"
			android:layout_width="150dp"
			android:layout_height="60dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="10dp"
			android:inputType="textEmailAddress"
			android:textSize="30sp"
			/>

        <Button 
		    android:id="@+id/btn_confirm"
		    android:layout_width="160dp"
	        android:layout_height="60dp"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="10dp"
	        android:background="@drawable/button_style"
		    android:textSize="25sp"
		    android:text="@string/str_ok"
	    />
        
		<Button
		    android:id="@+id/btn_objinfo_cnl"
		    android:layout_width="160dp"
	        android:layout_height="60dp"
			android:layout_marginTop="20dp"
		    android:background="@drawable/button_style"
		    android:textSize="25sp"
		    android:text="@string/strNativeBtn"
		    />
    </LinearLayout>
    
</LinearLayout>