<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/background"
     >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/background"
		>
		<ImageButton
			android:id="@+id/ib_import"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/usb_to_flash"
			android:background="@drawable/bg_big_button"
			/>

		<ImageButton
			android:id="@+id/ib_export"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:src="@drawable/flash_to_usb"
			android:background="@drawable/bg_big_button"
			/>

		<ImageButton
			android:id="@+id/ib_flush"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:src="@drawable/usb_to_flash_override"
			android:background="@drawable/bg_big_button"
			/>
	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
<!-- H.M.Wang 2022-11-27 追加一个导入用户群组(User Group)的按钮 -->
		<TextView
			android:id="@+id/btn_import_ug"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="10dp"
			android:padding="10dp"
			android:textColor="@color/blue"
			android:text="@string/strImportUG"
			android:textSize="40sp"/>
<!-- End of H.M.Wang 2022-11-27 追加一个导入用户群组(User Group)的按钮 -->
<!-- H.M.Wang 2023-9-4 追加一个输出log到U盘的按键 -->
		<TextView
			android:id="@+id/btn_log_2usb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:padding="10dp"
			android:textColor="@color/blue"
			android:text="@string/strExportLog"
			android:textSize="40sp"/>
<!-- End of H.M.Wang 2023-9-4 追加一个输出log到U盘的按键 -->
		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:background="@drawable/bg_mid_button"
			android:layout_marginTop="10dp"
			android:padding="10dp"
			android:text="@string/str_btn_cancel"
			android:textSize="40sp"/>
	</RelativeLayout>
</LinearLayout>
