<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44000000" >
    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:background="#88FF0000"
        android:src="@drawable/cancel_icon"
        android:scaleType="fitCenter"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:minWidth="500dp"
        android:background="@color/white"
        android:layout_centerInParent="true"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="36sp"
            android:text="@string/str_login_prompt"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:columnCount="2"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="right"
                android:textSize="28sp"
                android:text="@string/str_user_number"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/user_number"
                android:layout_width="wrap_content"
                android:minWidth="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:lines="1"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:background="#ffeeeeee"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="right"
                android:textSize="28sp"
                android:text="@string/str_password"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:minWidth="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:lines="1"
                android:inputType="textPassword"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:background="#ffeeeeee"
                />
        </GridLayout>
        <RadioButton
            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textSize="28sp"
            android:checked="true"
            android:text="@string/str_remember_pw"
            android:textColor="@color/black"
            />
        <ProgressBar
            android:id="@+id/processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="gone"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/result_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textSize="28sp"
            android:textColor="@color/red"
            />
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/str_login"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:background="@drawable/bg_big_button_normal"
            />
    </LinearLayout>
</RelativeLayout>